--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@ html {
 
 body {
     background: var(--color-primary);
-    min-width: 300px;
+    /* min-width: 300px; */
+    min-width: 900px;
+    line-height: 1.5;
 }
 
 .main {
@@ -69,27 +71,80 @@ body {
     position: relative;
 }
 
-.sections__langs {
+.langs-right {
     display: flex;
     justify-content: flex-end;
 }
 
 .sections__btns {
+    width: 100%;
     position: absolute;
     top: 60%;
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
     transform: translateY(-50%);
-    width: 100%;
+    text-align: center;
+    padding: 0 2.5rem;;
 }
 
 .sections_wrap {
     display: flex;
-    transform: translateX(-50%);
 }
 
-.bg-margin-bottom {
+.section-1 {
+    height: 100vh;
+    padding-top: 3rem;
+    position: relative;
+}
+
+.btns-wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.section-btn-wrap {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.section-btn {
+    transform: translateX(50%);
+}
+
+.section-1__content {
+    display: flex;
+}
+
+.section-1__text {
+    width: 50%;
+    background: rgba(255,255,255,0.9);
+    font-size: 1.6rem;
+    padding: 2.5rem;
+    margin-left: 2.5rem;
+    color: var(--color-grey);
+}
+
+.section-1__gallery {
+    width: 50%;
+    padding: 0 2.5rem;
+}
+
+.section-1__gallery img {
+    height: 300px;
+    width: 20%;
+    margin: 0;
+}
+
+.heading {
+    margin-bottom: 1.5rem;
+}
+
+.margin-bottom {
     margin-bottom: var(--margin-bottom);
+}
+
+.margin-top {
+    margin-top: var(--margin-top);
 }
 
 .margin-right {
