--- a/css/vars.css
+++ b/css/vars.css
@@ -4,6 +4,7 @@
     --color-primary: #55c57a;
     --color-grey: #777;
     --margin-bottom: 3rem;
+    --margin-top: 3rem;
     --margin-right: 2.5rem;
 }
 
