--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ body {
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .btn {
