Add .active and prefixers

--- a/css/vars.css
+++ b/css/vars.css
@@ -10,3 +10,15 @@
 html {
     --font-size: 62.5%;
 }
+
+@media (max-width: 576px) {
+    html {
+        --font-size: 50%;
+    }
+}
+
+@media (max-width: 1800px) {
+    html {
+        --font-size: 75%;
+    }
+}
