--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     padding: 0;
     margin: 0;
@@ -6,7 +7,8 @@
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+            box-sizing: inherit;
 }
 
 a {
@@ -14,30 +16,40 @@ a {
 }
 
 html {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-size: var(--font-size);
 }
 
 body {
     background: var(--color-primary);
     min-width: 576px;
-   /*  min-width: 900px; */
     line-height: 1.5;
 }
 
 .main {
     position: relative;
     height: 100vh;
+    display: block;
 }
 
 .content {
     position: absolute;
     top: 60%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .btn {
@@ -57,12 +69,17 @@ body {
 
 .bg-btn:active,
 .bg-btn:hover {
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+            box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
 }
 
 .main__langs {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .sm-btn {
@@ -80,25 +97,37 @@ body {
 }
 
 .sections__fn-btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .langs-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
 }
 
 .sections__btns {
     width: 100%;
     position: absolute;
     top: 60%;
-    transform: translateY(-40%);
+    -webkit-transform: translateY(-40%);
+        -ms-transform: translateY(-40%);
+            transform: translateY(-40%);
     text-align: center;
     padding: 0 2.5rem;;
 }
 
 .sections_wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -109,52 +138,53 @@ body {
 }
 
 .btns-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
 }
 
 .section-btn-wrap {
     width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
 }
 
 .section-btn {
-    transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+            transform: translateX(50%);
 }
 
 @media (max-width: 900px) {
     .section-btn-wrap {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: flex-start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
     }
 
     .section-btn {
-        transform: translateX(0);
+        -webkit-transform: translateX(0);
+            -ms-transform: translateX(0);
+                transform: translateX(0);
         margin-left: var(--marginX);
     }
 }
 
-@media (max-width: 796px) {
-    .section-1__content, .section-2__content, .section-3__content, .section-4__content {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .section-1__text, .section-2__text, .section-3__text, .section-4__text {
-        width: 100%;
-        margin-left: 0;
-    }
-
-    .section-btn {
-        transform: translateX(0);
-        margin-left: 0;
-        margin-right: var(--marginX);
-    }
-}
-
 .section-1__content, .section-2__content, .section-3__content, .section-4__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -171,13 +201,19 @@ body {
 .section-1__gallery, .section-2__gallery, .section-3__gallery, .section-4__gallery {
     width: 50%;
     padding: 0 2.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .img-cont {
-    flex-basis: 48%;
+    -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
     width: 50%;
     margin-bottom: var(--marginY);
 }
@@ -188,12 +224,24 @@ body {
 }
 
 @media (max-width: 796px) {
+    .section-btn {
+        -webkit-transform: translateX(0);
+            -ms-transform: translateX(0);
+                transform: translateX(0);
+        margin-left: 0;
+        margin-right: var(--marginX);
+    }
     .section-1, .section-2, .section-3, .section-4 {
         padding: 2.5rem;
     }
     .section-1__content, .section-2__content, .section-3__content, .section-4__content {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 
     .section-1__text, .section-2__text, .section-3__text, .section-4__text {
@@ -229,5 +277,6 @@ body {
 }
 
 .active {
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+            box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
 }
