--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ body {
 .section-1, .section-2, .section-3, .section-4 {
     padding-top: 3rem;
     position: relative;
-    min-width: 576px;
 }
 
 .btns-wrap {
@@ -223,6 +222,46 @@ body {
     width: 100%;
 }
 
+@media (max-width: 691px) {
+    .sections__fn-btns {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    }
+
+    .sections__back-btn {
+        text-align: center;
+        margin-bottom: var(--marginY);
+    }
+
+    .sections__back-btn .back-btn {
+        margin-left: 0 !important;
+    }
+
+    .sections__langs-right {
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: flex;
+       -webkit-box-pack: center;
+           -ms-flex-pack: center;
+               justify-content: center;
+       -webkit-transform: translateX(1.5rem);
+           -ms-transform: translateX(1.5rem);
+               transform: translateX(1.5rem);
+    }
+
+    .sections__btns {
+        position: relative;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    }
+}
+
 @media (max-width: 796px) {
     .section-btn {
         -webkit-transform: translateX(0);
@@ -253,6 +292,17 @@ body {
     .section-1__gallery, .section-2__gallery, .section-3__gallery, .section-4__gallery {
         width: 100%;
         padding: 0;
+    }
+}
+
+@media (max-width: 683px) {
+    .btns-wrap {
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    }
+
+    .section-1__btn-back, .section-2__btn-back, .section-3__btn-back, .section-4__btn-back {
+        margin-bottom: var(--marginY);
     }
 }
 
